# cwscript-v0

./: .gitignore  README.md  build-grammar.sh  pyproject.toml
examples/TerraSwap/: TerraSwapFactory.cws  TerraSwapToken.cws
grammar/: CWScript.g4
grammar-ouput/grammar/: CWScript.interp  CWScriptLexer.interp  CWScriptLexer.py  CWScriptLexer.tokens  CWScriptListener.py  CWScriptParser.py  CWScriptVisitor.py
lang-design/: datatypes.rs
rust-output/TerraSwap/: TerraSwapFactory.rs
src/: ast_nodes.py  main.py
